<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="@drawable/backgrond"
    tools:context=".MainActivity"
    >


    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/topbar1">
        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/trans_app"
            />


        <TextView android:text="@string/TransApp" android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:id="@+id/txtMainChat"
            android:layout_alignParentTop="true"
            android:textColor="#ffffffff"
            android:layout_alignBaseline="@+id/icon_image"
            android:textSize="25dp"
            android:paddingLeft="40dp"
            android:paddingRight="10dp"
            android:shadowColor="@color/ripple_material_light"
            android:shadowDx="10"
            android:shadowDy="0"
            android:shadowRadius="24"
            android:paddingTop="5dp"
            android:paddingBottom="0dp"
            android:textStyle="bold"
            android:singleLine="false"

            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/window_title_box"
        android:layout_below="@+id/topbar"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/window_title"
            android:text="@string/main_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:shadowRadius="1"
            android:shadowDy="2"
            android:shadowColor="@color/ripple_material_light"
            android:shadowDx="0"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/email_area"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/window_title_box">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtFEmail"
            android:background="@drawable/textbox"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="#ff000000"
            android:textSize="15dp"
            android:layout_alignBaseline="@+id/txtFEmail"
            android:layout_toLeftOf="@+id/txtFEmail"
            android:layout_toStartOf="@+id/txtFEmail" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/password_area"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/email_area">
        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="#ff000000"
            android:textSize="15dp"
            android:layout_alignBaseline="@+id/txtFPassword"
            android:layout_toLeftOf="@+id/txtFPassword"
            android:layout_toStartOf="@+id/txtFPassword" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtFPassword"
            android:layout_centerHorizontal="true"
            android:maxLength="8"
            android:background="@drawable/textbox"
            android:layout_alignParentTop="true" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFPassword"
            android:layout_centerHorizontal="true"
            android:text="Remember Me"
            android:id="@+id/RememberMe"
            android:textColor="#ff000000"
            android:visibility="gone"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/login_area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_below="@+id/password_area">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect"
            android:id="@+id/btnConnect"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffffff"
            android:background="@drawable/connect_background_selector"
            />

        <TextView
            android:text="@string/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNewUser"
            android:textColor="@drawable/click_on_text"
            android:textSize="15dp"
            android:layout_marginTop="58dp"
            android:layout_below="@+id/btnConnect"
            android:layout_centerHorizontal="true"
            android:onClick="OnNewUserClick"
            android:clickable="true"
            />







        <TextView
            android:text="@string/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtForget"
            android:textColor="@drawable/click_on_text"
            android:textSize="15dp"
            android:layout_below="@+id/btnConnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:onClick="OnForgetPasswordClick"
            android:clickable="true"
            />

        <TextView
            android:text="@string/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/credit"
            android:textColor="#ff000000"
            android:textSize="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/txtForget"
            android:layout_alignStart="@+id/txtForget" />

        <TextView
            android:text="@string/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtStatus"
            android:textColor="#ffff003e"
            android:textSize="15dp"
            android:singleLine="false"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/txtContactUs"
            android:layout_alignRight="@+id/credit"
            android:layout_alignEnd="@+id/credit" />

        <TextView
            android:text="@string/contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtContactUs"
            android:textColor="@drawable/click_on_text"
            android:textSize="15dp"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/txtNewUser"
            android:layout_centerHorizontal="true"
            android:onClick="OnContactUsClick"
            android:clickable="true"
            />
        <TextView
            android:text="@string/Guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGuest"
            android:textColor="@drawable/click_on_text"
            android:textSize="16dp"
            android:onClick="OnGuestClick"
            android:clickable="true"
            android:layout_below="@+id/txtNewUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />



    </RelativeLayout>



</RelativeLayout>
