<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:background="@drawable/backgrond"
    tools:context="com.example.user.chatclient.ForgetPasswordActivity">
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/topbar1">
        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/trans_app"
            />


        <TextView android:text="@string/TransApp" android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:id="@+id/txtFpass"
            android:layout_alignParentTop="true"
            android:textColor="#ffffffff"
            android:layout_alignBaseline="@+id/icon_image"
            android:textSize="25dp"
            android:paddingLeft="40dp"
            android:paddingRight="10dp"
            android:shadowColor="@color/ripple_material_light"
            android:shadowDx="10"
            android:shadowDy="0"
            android:shadowRadius="24"
            android:paddingTop="5dp"
            android:paddingBottom="0dp"
            android:textStyle="bold"
            android:singleLine="false"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FPassTitle"
        android:layout_below="@+id/topbar">
        <TextView
            android:text="@string/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtMainChat"

            android:textSize="20dp"
            android:textStyle="bold"
            android:shadowColor="@color/ripple_material_light"
            android:shadowRadius="1"
            android:shadowDy="2"
            android:singleLine="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FPassTitle">

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#ff001fff"
            android:textSize="18dp"
            android:layout_alignBaseline="@+id/txtFEmailForgetPassword"
            android:layout_alignBottom="@+id/txtFEmailForgetPassword"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtFEmailForgetPassword"
            android:background="@drawable/textbox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send"
            android:id="@+id/btnSendPassword"
            android:background="@drawable/connect_background_selector"
            android:textColor="#ffffff"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/txtFEmailForgetPassword"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="#ff000000"
            android:textSize="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
